# MedVision-Doctor

./: .gitignore  README.md  TECHNICAL_REPORT.md  USER_GUIDE.md  config.yaml  pyproject.toml  requirements.txt
frontend/: index.html  script.js
src/: main.py
src/models/: minigpt_med.py
src/services/: image_processing.py  report_generation.py
src/utils/: config.py  image_utils.py  logging.py  session_manager.py
